--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@clerk/nextjs": "^5.7.2",
     "clsx": "^2.1.1",
     "firebase": "^10.14.0",
+    "firebaseui": "^6.1.0",
     "framer-motion": "^11.11.8",
     "next": "14.2.15",
     "react": "^18",
