--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^5.7.2",
+    "axios": "^1.7.7",
     "clsx": "^2.1.1",
     "firebase": "^10.14.0",
     "firebaseui": "^6.1.0",
+    "flutterwave-react-v3": "^1.3.2",
     "framer-motion": "^11.11.8",
     "next": "14.2.15",
     "react": "^18",
