--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-three/fiber": "^8.17.10",
+    "@types/three": "^0.170.0",
     "axios": "^1.7.7",
     "clsx": "^2.1.1",
     "firebase": "^10.14.0",
@@ -18,7 +20,8 @@
     "next": "14.2.15",
     "react": "^18",
     "react-dom": "^18",
-    "tailwind-merge": "^2.5.3"
+    "tailwind-merge": "^2.5.3",
+    "three": "^0.171.0"
   },
   "devDependencies": {
     "@types/node": "^20",
